# Chtholly-C

./: .gitignore  AUDIT_REPORT.md  AstPrinter.cpp.bak  CMakeLists.txt  Chtholly.md  IMPROVEMENTS.md  RoadMap.md  SPEC_AUDIT.md  SPEC_VS_IMPL_ANALYSIS.md  Transpiler.cpp.bak  agents.md  build.py  helper.cns  lexer_test.cns  mut_ref_test.cns  parser_test_2.cns  test.cns  typed_literals_test.cns
docs/: Building.md
include/: AST.h  ASTPrinter.h  AstPrinter.h  CodeGen.h  Environment.h  Lexer.h  Parser.h  SemanticAnalyzer.h  Token.h  TokenType.h  Type.h
scripts/: build.py
src/: AST.h  ASTPrinter.cpp  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  Chtholly.cpp  Chtholly.h  CodeGen.cpp  CodeGen.h  Environment.cpp  Error.cpp  Error.h  Filesystem.cpp  Filesystem.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PrattParser.cpp  PrattParser.h  Resolver.cpp  Resolver.h  Result.h  Sema.cpp  Sema.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  TokenType.h  Transpiler.cpp  Transpiler.h  Type.cpp  Type.h  TypeInfo.h  TypeSystem.cpp  TypeSystem.h  (+6 more)
src/AST/: AST.cpp  AST.h  ASTPrinter.cpp  ASTPrinter.h  Expr.h  Stmt.h
src/backend/: Transpiler.cpp  Transpiler.h
src/common/: Error.cpp  Error.h
src/driver/: Chtholly.cpp  Chtholly.h  main.cpp
src/frontend/: Lexer.cpp  Lexer.h  Parser.cpp  PrattParser.cpp  Token.h  TypeInfo.h
src/frontend/AST/: ASTPrinter.cpp  Expr.h  Stmt.h
src/middle/: Resolver.cpp  Resolver.h
tests/: ASTPrinterTests.cpp  ArrayTest.cpp  AstPrinterTests.cpp  CMakeLists.txt  CodeGenTest.cpp  CodeGenTests.cpp  ControlFlowTests.cpp  ErrorReporterTests.cpp  FilesystemEndToEndTests.cpp  FilesystemTest.cpp  ForLoopTest.cpp  FunctionDeclarationTest.cpp  FunctionTests.cpp  IfElseTest.cpp  ImportTest.cpp  ImportTests.cpp  LexerTest.cpp  LexerTests.cpp  MetaTests.cpp  MethodTests.cpp  OperatorTests.cpp  OptionTest.cpp  OwnershipTest.cpp  ParserTest.cpp  ParserTests.cpp  ReflectionTests.cpp  ResolverMathTests.cpp  ResolverTests.cpp  SemaTest.cpp  SemaTests.cpp  SemanticAnalyzerTest.cpp  StructDeclarationTest.cpp  StructTests.cpp  SwitchStatementTest.cpp  SwitchTests.cpp  SymbolTableTest.cpp  TestArray.cpp  TestArrayStdLib.cpp  TestBitwiseOperators.cpp  TestCustomOperator.cpp  (+53 more)
